# typing-inspection

./: Makefile  README.rst  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  coverage.yml  coverage_comment.yml  docs_publish.yml  lint.yml  tests.yml
0.1/: objects.inv
0.1/api/introspection/: index.html
0.1/api/typing_objects/: index.html
0.1/search/: search_index.json
0.2/: sitemap.xml
0.3/: index.html  sitemap.xml
0.4/: 404.html  index.html  objects.inv  sitemap.xml
0.4/api/introspection/: index.html
0.4/api/typing_objects/: index.html
0.4/search/: search_index.json
0.4/usage/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api/introspection/: index.html
dev/api/typing_objects/: index.html
dev/search/: search_index.json
dev/usage/: index.html
docs/: usage.md
docs/api/: introspection.md
docs/source/: conf.py  index.rst  usage.rst
docs/source/api/: index.rst  introspection.rst  typing_objects.rst
src/typing_inspection/: introspection.py  typing_objects.py  typing_objects.pyi
src/typing_inspection/introspection/: _parsing.py  _types.py  _utils.py
tests/: test_temp.py
tests/introspection/: test_inspect_annotation.py
tests/typing_objects/: test_member_checks.py
