[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'typing-inspection'
version = '0.1.0'
description = 'Runtime typing introspection tools'
authors = [
    {name = 'Victorien Plot', email = 'contact@vctrn.dev'},
]
readme = 'README.rst'
classifiers = [
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Typing :: Typed',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
requires-python = '>=3.9'
dependencies = [
    'typing-extensions>=4.12.0',
]

[dependency-groups]
docs = [
    'furo>=2024.8.6',
    'sphinx>=7.4.7',
    'sphinx-paramlinks>=0.6.0',
    'sphinx-toggleprompt>=0.6.0',
]
lint = [
    'ruff>=0.9.5',
]


[tool.ruff]
line-length = 120
target-version = 'py39'

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = [
    'E',      # pycodestyle (E)
    'W',      # pycodestyle (W)
    'F',      # Pyflakes
    'UP',     # pyupgrade
    'I',      # isort
    'PL',     # Pylint
    'RUF',    # Ruff
    'Q',      # flake8-quotes
    'YTT',    # flake8-2020
    'B',      # flake8-bugbear
    'C4',     # flake8-comprehensions
    'T10',    # flake8-debugger
    'FA',     # flake8-future-annotations
    'PIE',    # flake8-pie
    'T20',    # flake8-print
    'RSE',    # flake8-raise
    'PTH',    # flake8-use-pathlib
]
ignore = [
    'PLR0912',
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.lint.isort]
known-first-party = ['typing_inspection']

[tool.pytest.ini_options]
pythonpath = 'src'
